[fixed]ディレクトリを無視しない様に修正

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+# まず全部無視
 *
+
+# .gitignoreファイル自体は無視しない
 !.gitignore
+
+# .hsファイルは無視しない
 !*.hs
+
+# .mdファイルは無視しない
 !*.md
+
+# ディレクトリは無視しない（ディレクトリを辿れるようにする）
+!*/
